tests: fix collection tests to work with gpg 2.1

https://bugzilla.gnome.org/show_bug.cgi?id=771052

Signed-off-by: Stef Walter <stefw@redhat.com>
 * Fixed whitespace